# wgslpp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/wgslpp-cli/: Cargo.toml
crates/wgslpp-cli/src/: cmd_minify.rs  cmd_pipeline.rs  cmd_preprocess.rs  cmd_reflect.rs  cmd_validate.rs  main.rs
crates/wgslpp-core/: Cargo.toml
crates/wgslpp-core/src/: attributes.rs  dce.rs  lib.rs  minify.rs  reflect.rs  rename.rs  validate.rs
crates/wgslpp-lsp/: Cargo.toml
crates/wgslpp-lsp/src/: completion.rs  diagnostics.rs  folding.rs  formatting.rs  hover.rs  main.rs  navigation.rs  semantic_tokens.rs  server.rs  symbols.rs  workspace.rs
crates/wgslpp-preprocess/: Cargo.toml
crates/wgslpp-preprocess/src/: conditional.rs  config.rs  evaluator.rs  include.rs  lib.rs  macros.rs  packages.rs  source_map.rs
npm/: README.md
npm/cli/: README.md  binary.d.ts  binary.js  index.d.ts  index.js  package.json
npm/cli-darwin-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
tests/integration/: Cargo.toml  simple.wgsl
tests/integration/src/: lib.rs
tests/integration/tests/: miniray_dce.rs  miniray_samples.rs  miniray_validation.rs  pipeline.rs
tests/preprocess/: common.wgsl  main.wgsl
wgslpp-clion/: build.gradle.kts  gradlew  settings.gradle.kts
wgslpp-clion/src/main/resources/templates/: wgsl.xml
wgslpp-vscode/: .vscodeignore  README.md  language-configuration.json  package.json  tsconfig.json
wgslpp-vscode/snippets/: wgsl.json
wgslpp-vscode/src/: extension.ts
(+10 files in other folders)
